# yodo_price

./: README.md  alembic.ini  bot.py  install.sh  main.py  pyproject.toml  settings.py
migrations/: env.py
migrations/versions/: 8344b01d3875_add_enable_column_to_product.py
scripts/: reload.sh
systemd/: yodo_git-pull.service  yodo_git-pull.timer  yodo_price.service  yodo_price_bot.service
tests/: conftest.py  dummy_html.py  test_get.py  test_latest_price.py  test_model.py  test_price_change.py  test_query.py
tests/test_data/: 100000001000193273.html
yodo_price/: check.py  cli.py  constants.py  error.py  filters.py  get.py  list.txt  main.py  model.py  notify.py  parse.py  pyproject.toml  query.py  update.py  upload.py
yodo_price/yodo_price/: get.py  notify.py  parse.py  update.py  upload_db.py
